--- a/css/inicio.css
+++ b/css/inicio.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
   }
 body {
-    background-image: url("/fotos/asdad.png");
+    background-image: url("../fotos/asdad.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
